<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Batik Nusantara</string>
    <!-- Auth -->
    <string name="title_splash">Splash</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="welcome_back">Login</string>
    <string name="create_account">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="already_have_account">Kembali ke </string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <!-- Navigation -->
    <string name="title_home">Home</string>
    <string name="title_product">Products</string>
    <string name="title_profile">Profile</string>
    <string name="title_order">Orders</string>


    <string name="back">Kembali</string>
</resources>